_sass/main.scss
@import "grid";
@import "reset";
@import "fonts";
@import "colors";
@import "markdown";

body{
  font-family: $f_sans-reg;
  font-style: normal;
  color: $c_black;
  background-color: $c_white;
  font-size: 16px;
  line-height: 1.6;
  a{
    color: $c_gray-2;
    text-decoration: none;
    &:hover{color: lighten($c_green-black, 30%);}
  }
  strong{font-family: $f_sans-bold;}
}

.hi{
  width: 100%;
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  height: 5px;
  background: linear-gradient(90.03deg, #FFC046 0%, #FF8F72 50.24%, #7833FF 100%);
}

.left-nav{
  position: fixed;
  width: 45px;
  padding: 45px 10px 10px 10px;
  background: $c_gray-4;
  position: fixed;
  top: 5px;
  left: 0;
  bottom: 0;
  text-align: center;
  z-index: 100;
  border-right: 1px solid lighten($c_gray-3, 5%);
  .socials{
    margin: 50px 0;
  }
  .switch,
  a{
    cursor: pointer;
    display: block;
    margin: 0 0 10px 0;
    padding: 10px;
    line-height: 0;
    img{
      width: 20px;
      height: auto;
    }
    transition: all 250ms ease;
    &:hover{
      background-color: $c_white;
      border-radius: 10px;
      transition: all 250ms ease;
      span.link{
        transition: all 250ms ease;
      }
    }
  }
}

.content{
  h2{
    font-family: $f_sans-bold;
    margin: 0 0 10px 0;
    font-size: 20px;
  }
  p{
    margin: 0 0 20px 0;
    color: $c_body-text;
    a{
      transition: all 250ms ease;
      color: $c_blue;
      &:hover{
        transition: all 250ms ease;
        color: $c_purple;
      }
    }
  }
  header{
    margin: 0 0 50px 0;
    .desktop-menu{
      a{
        padding: 5px 10px;
        background: $c_gray-4;
        transition: all 250ms ease;
        border-radius: 5px;
        margin: 0 0 0 20px;
        transition: all 250ms ease;
        box-shadow: 0px 0px 20px rgba(0,0,0,0.0);
        border: 1px solid lighten($c_gray-3, 5%);
        color: $c_blue;
        &:hover{
          background: #fff;
          transition: all 250ms ease;
          color: $c_purple;
          box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
        }
      }
    }
  }
  .work-row{
    padding: 10px 1rem;
    a{
      transition: all 250ms ease;
      color: $c_blue;
      &:hover{
        transition: all 250ms ease;
        color: $c_purple;
      }
    }
    .year,
    .status{
      color: $c_gray-1;
      font-size: 12px;
      padding-left: 5px;
    }
    .year{
      margin: 0 10px 0 0;
    }
    [class*="col-"]{
      padding: 0;
    }
    .position{
      font-size: 12px;
      padding: 3px 5px;
      display: inline-block;
      background-color: lighten($c_gray-3, 5%);
      text-align: left;
      color: $c_gray-2;
      border-radius: 5px;
      width: none;
    }
  }
  .rel{
    position: relative;
    a{
      display: block;
    }
    img{
      position: absolute;
      top: 3px;
    }
    span{
      padding: 0 0 0 30px;
    }
  }
}

footer{
  margin: 20px 0 0 0;
  padding: 20px 0 0 0;
  border-top: 1px solid lighten($c_gray-3, 5%);
  p{
    color: $c_body-text;
    font-size: 14px;
  }
}
.marg-auto{
  margin: 0 auto;
}

@media only all and (max-width: 550px) {
  .writing-list{
    .work-row{
        max-width: 100%;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        display: block;
        position: relative;
        &::after {
          content: " ";
          height: 20px;
          width: 40px;
          background-color: $c_white;
          background: linear-gradient(270deg, $c_white 0%, transparent);
          position: absolute;
          right: 0;
          top: 0;
          bottom: 0;
          height: 100%;
        }
    }
  }
  .left-nav{
    padding: 15px 0px 0px 0px;
    width: 45px;
  }
}

body.dark-mode{
  background-color: $c_dark-bg;
  color: $c_white;
  a{color: $c_blue-light;}
  p{color: $c_body-text-dark;}
  .work-row{
    .position{
      background-color: lighten($c_dark-bg, 10%);
      text-align: left;
      color: $c_body-text-dark;
      border-radius: 5px;
      width: none;
    }
    a{color: $c_blue-light;}
  }
  .content{
    header{
      .desktop-menu{
        a{
          background-color: lighten($c_dark-bg, 2%);
          border: 1px solid lighten($c_dark-bg, 8%);
          color: $c_blue-light;
          &:hover{
            background: lighten($c_dark-bg, 5%);
            transition: all 250ms ease;
            color: lighten($c_purple, 15%);
            box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
          }
        }
      }
    }
  }
  .left-nav{
    background-color: lighten($c_dark-bg, 2%);
    border-right: 1px solid lighten($c_dark-bg, 8%);
    .switch,
    a{
      transition: all 250ms ease;
      &:hover{
        background-color: $c_dark-bg;
        transition: all 250ms ease;
        span.link{
          transition: all 250ms ease;
        }
      }
      .logo-svg{
        filter: brightness(65%) contrast(200%);
      }
      .svg-icons{
        filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(60%) contrast(100%);
      }
    }
  }
  @media only all and (max-width: 550px) {
    .writing-list{
      .work-row{
          &::after {
            background: linear-gradient(270deg, $c_dark-bg 0%, transparent);
          }
      }
    }
  }
}

